# deduper

./: .gitignore  CMakeLists.txt  README.md  base64.cpp  base64.hpp  compressed_vector.hpp  imageutil.cpp  imageutil.hpp  signature.cpp  signature.hpp  signature_db.cpp  signature_db.hpp  subslice_signature.cpp  subslice_signature.hpp  thread_pool.hpp
.github/workflows/: windows-msys2.yml
doc/: qdeduper.md
mingui/: CMakeLists.txt  README.md  imageitem.cpp  imageitem.hpp  main.cpp  mingui.cpp  mingui.hpp
qdeduper/: CMakeLists.txt  filescanner.cpp  filescanner.hpp  imageitem.cpp  imageitem.hpp  main.cpp  mingui.cpp  mingui.hpp  pathchooser.cpp  pathchooser.hpp  preferencedialog.cpp  preferencedialog.hpp  resources.qrc  settings.cpp  settings.hpp  sigdb_qt.cpp  sigdb_qt.hpp  utilities.cpp  utilities.hpp
tests/: CMakeLists.txt  base64_test.cpp  compressed_vector.cpp  deduper_legacy.cpp  image_util_tests.cpp  signature_test.cpp  testdrive.cpp  testdrive_sqlite.cpp
xsig/: CMakeLists.txt
xsig/include/: signature.hpp  signature_db.hpp  subslice_signature.hpp
xsig/src/: base64.cpp  base64.hpp  compressed_vector.hpp  imageutil.hpp  signature.cpp  signature_db.cpp  thread_pool.hpp
